Increase z-index of required icon in text inputs to ensure it is not …
…behind suffix

--- a/labsystem/scss/components/_lab-inputs.scss
+++ b/labsystem/scss/components/_lab-inputs.scss
@@ -261,7 +261,7 @@ $input-border-disabled: $mineral-30;
   position: absolute;
   top: -$spacing-02;
   right: -$spacing-02;
-  z-index: 1;
+  z-index: 2;
   display: inline-block;
   width: $input-icon-size;
   height: $input-icon-size;
